# debug-anchor

./: Anchor.toml  package.json
programs/test-program/: Cargo.toml
programs/test-program/src/: lib.rs
programs/test-program/tests/: test_ix.rs
tests/: test-program.ts
tests/client-gen/accounts/: State.ts
tests/client-gen/instructions/: index.ts  initialize.ts
tests/client-gen/types/: FooEnum.ts  index.ts
