[package]
name = "test-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"

[dev-dependencies]
solana-program-test = "1.8.14"
solana-sdk = "1.8.14"
spl-token = "3.1.1"
bincode = "1.3.3"
